removed double scroll & fixed layout

--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,16 @@
   box-sizing: border-box;
 }
 
+html,
 body {
+  max-width: 100vw;
+  overflow-x: hidden !important;
   margin: 0;
+  padding: 0;
+  height: auto;
+}
+
+body {
   font-family: 'Inter', system-ui, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -41,7 +49,7 @@ body {
   margin: 0;
   text-align: left;
   border-inline: none;
-  min-height: 100svh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
